JOORSAND/src/objects/Field_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Values__c</fullName>
        <label>Field Values</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadOnly_Fields__c</fullName>
        <label>ReadOnly Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Fields__c</fullName>
        <label>Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Field Settings</label>
    <pluralLabel>Field Settings</pluralLabel>
</CustomObject>